example/tests/compile_errors/04a_bad_body_response.stderr
error: autoroute macro failed: expected one of: content_type, serializer, headers, description, trace
 --> tests/compile_errors/04a_bad_body_response.rs:7:62
  |
7 | #[autoroute(GET, path="/home", responses=[(200, body=String, unknown, description="desc")])]
  |                                                              ^^^^^^^

error[E0618]: expected function, found `Option<_>`
  --> tests/compile_errors/04a_bad_body_response.rs:10:73
   |
10 | #[autoroute(GET, path="/home", responses=[(200, body=String, serializer=None, description="desc")])]
   |                                                                         ^^^^ call expression requires function

error[E0599]: no method named `into_response` found for tuple `(StatusCode, Option<std::string::String>)` in the current scope
  --> tests/compile_errors/04a_bad_body_response.rs:14:43
   |
14 | #[autoroute(GET, path="/home", responses=[(200, body=String, serializer=Option::Some, description="desc")])]
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `(StatusCode, Option<std::string::String>)`
   |
help: one of the expressions' fields has a method of the same name
   |
14 | #[autoroute(GET, path="/home", responses=[0.(200, body=String, serializer=Option::Some, description="desc")])]
   |                                           ++
